AC_INIT(ocelot, 0.8)
AM_INIT_AUTOMAKE([1.11 no-define foreign])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])

AX_CHECK_COMPILE_FLAG([-std=c++11], [], [AC_MSG_ERROR([Compiler does not support -std=c++11])])
AX_BOOST_BASE([1.37], [], [AC_MSG_ERROR(Need boost >= 1.37)])
AX_BOOST_IOSTREAMS
AX_BOOST_SYSTEM
MYSQL_C_API_LOCATION
AC_LANG_PUSH(C++)
MYSQLPP_DEVEL
EV_DEVEL
AC_LANG_POP(C++)
TCMALLOC

AC_OUTPUT
